cmake_minimum_required(VERSION 3.15)
project(EDD_1S2020_PY1_201807394)

set(CMAKE_CXX_STANDARD 14)

add_executable(EDD_1S2020_PY1_201807394 main.cpp DataSructures/CircularDoubleList.cpp DataSructures/CircularDoubleList.h DataSructures/Queue.cpp DataSructures/Queue.h DataSructures/BinarySearchTree.cpp DataSructures/BinarySearchTree.h Classes/User.cpp Classes/User.h DataSructures/MatrixNode.cpp DataSructures/MatrixNode.h Classes/Coin.cpp Classes/Coin.h DataSructures/Matrix.cpp DataSructures/Matrix.h)